--- a/package.json
+++ b/package.json
@@ -9,18 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "8": "^0.0.1",
+    "amqplib": "^0.10.4",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.10",
+    "moment": "^2.30.1",
+    "next": "15.0.1",
+    "path-to-regexp": "^8.2.0",
+    "qs": "^6.13.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "send": "^1.1.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "eslint-config-next": "15.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
+  },
+  "resolutions": {
+      "moment": "^2.29.4",
+      "path-to-regexp": "^1.8.0",
+      "qs": "^6.10.0",
+      "send": "^0.19.1",
+      "ajv": "^6.12.6"
   }
 }
